turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:10: error: not enough arguments for method step: (rule: Array[Char], colors: Array[java.awt.Color])Unit.
Unspecified value parameter colors.
  if (step(id)== R){
          ^LangtonsAnt:10: error: not found: value R
  if (step(id)== R){
                 ^LangtonsAnt:13: error: not enough arguments for method step: (rule: Array[Char], colors: Array[java.awt.Color])Unit.
Unspecified value parameter colors.
  if (step(id)== L){
          ^LangtonsAnt:13: error: not found: value L
  if (step(id)== L){
                 ^