turmites.lessons.turmites.langtoncolors.LangtonColors.scala.code
def step(rule:Array[Char], colors:Array[Color]) {
  var c = getCouleurSol()
  var id = 0
  for (i<- 0 to colors.length-1){
    if (colors(i) == c){
      id = i
    }
  }
  if (step(id)== R){
    droite()
  }
  if (step(id)== L){
    gauche()
  }
}